# rust-serverless

./: .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
api/: complex.rs  index.rs  simple.rs
api/auth/: login.rs  register.rs
api/blog/: get_posts.rs  post.rs
api/test/: index.rs  insert_test.rs
api/user/: [id].rs
api/users/: get_user.rs
app/: layout.tsx  page.tsx
app/login/: page.tsx
client/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/blog/: page.tsx
client/app/components/: post_button.tsx
client/app/login/: page.tsx  register_user.ts
client/components/: login_form.tsx  nav_bar.tsx  post_button.tsx
client/hooks/: useRange.tsx
client/styles/: globals.css
components/: icon.tsx  nav_bar.tsx
src_rs/: blog.rs  blog_post.rs  lib.rs
