[package]
# name = "simple_runtime_demo"
name = "rust_serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
serde_derive = "1.0.188"
rand = "0.8.5"
url = "2.4.1"
vercel_runtime = "1.1.0"
warp = "0.3.6"
postgrest = "1.6.0"
dotenv = "0.15.0"
# vercel_runtime = { version = "1.1.0", path = "../../crates/vercel_runtime" }

[lib]
path = "src_rs/lib.rs"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "blog"
path = "api/blog/post.rs"

[[bin]]
name = "get_blog_posts"
path = "api/blog/get_posts.rs"

[[bin]]
name = "test"
path = "api/test/index.rs"

[[bin]]
name = "insert_test"
path = "api/test/insert_test.rs"
